fix: replace name format jpg with capital

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="page-loader" id="page-loader">
       <div>
         <i class="ion ion-loading-d"></i>
-        <p>Menunggu keajaiban...</p>
+        <p>Ingpo loker...</p>
       </div>
     </div>
 
@@ -176,10 +176,10 @@
 
       <!-- BEGIN OF Slideshow Background -->
       <div class="cover-bg pos-abs full-size slide-show">
-        <i class="img" data-src="img/bg-slide4.jpg"></i>
+        <i class="img" data-src="img/bg-slide4.JPG"></i>
         <!-- <i class="img" data-src="img/bg-slide5.jpg"></i> -->
-        <i class="img" data-src="img/bg-slide6.jpg"></i>
-        <i class="img" data-src="img/bg-slide7.jpg"></i>
+        <i class="img" data-src="img/bg-slide6.JPG"></i>
+        <i class="img" data-src="img/bg-slide7.JPG"></i>
       </div>
       <!-- END OF Slideshow Background -->
 
