fix: ui message after click button "Konfirmasi Kehadiran"

--- a/index.html
+++ b/index.html
@@ -294,10 +294,7 @@
                   </button>
                 </div>
               </div>
-              <p
-                class="email-ok invisible"
-                style="text-align: center; margin-top: 20px"
-              >
+              <p class="email-ok invisible" style="margin-top: 20px">
                 <strong
                   >Terima kasih! Sampai jumpa di hari bahagia saya!</strong
                 >
