fix: replace text wisuda with my name

--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
             </div>
             <div class="h-right">
               <h3>Teknik Informatika<br />UPI YPTK</h3>
-              <h4 class="subhead"><a href="#register">Wisuda 2025</a></h4>
+              <h4 class="subhead">
+                <a href="#register">Alif Suryadi - 2025</a>
+              </h4>
             </div>
           </header>
         </section>
